# GPU_SR1000_CUDAFraktalePWR

./: .gitignore  CMakeLists.txt  README.md  main.cu
include/: GLManager.hpp  STrianglePar.hpp  STriangleSeq.hpp  constants.hpp  constexprMath.hpp  cudaCheck.hpp  interface.hpp  mandelbrotParallel.hpp  mandelbrotSequential.hpp  tests.hpp  utility.hpp
src/: GLManager.cpp  STrianglePar.cu  STriangleSeq.cpp  interface.cpp  mandelbrotParallel.cu  mandelbrotSequential.cpp  tests.cpp  utility.cpp
